Add three more columns to table and small edits to style

--- a/src/components/stats/stats.module.css
+++ b/src/components/stats/stats.module.css
@@ -17,12 +17,12 @@ li {
   cursor: pointer;
 }
 
-th:nth-child(2), th:nth-child(3) {
+th:nth-child(2), th:nth-child(3), th:nth-child(9) {
   background-color: #007bff;
   color: white;
 }
 
-th:nth-child(4) {
+th:nth-child(4), th:nth-child(10) {
   background-color: #28a745;
   color: white;
 }
@@ -37,12 +37,27 @@ th:nth-child(6) {
   color: white;
 }
 
-th:nth-child(7), th:nth-child(8) {
+th:nth-child(7), th:nth-child(8), th:nth-child(11) {
   background-color: #343a40;
   color: white;
 }
 
-tbody>tr>td:nth-child(4) {
-  /* background-color: black;
-  color: white; */
+tbody>tr>td:nth-child(2), tbody>tr>td:nth-child(3), tbody>tr>td:nth-child(9) {
+  background-color: rgba(0, 123, 255, 0.2);
+}
+
+tbody>tr>td:nth-child(4), tbody>tr>td:nth-child(10) {
+  background-color: rgba(40, 167, 69, 0.2);
+}
+
+tbody>tr>td:nth-child(5) {
+  background-color: rgba(220, 53, 69, 0.2);
+}
+
+tbody>tr>td:nth-child(6) {
+  background-color: rgba(255, 0, 0, 0.2);
+}
+
+tbody>tr>td:nth-child(7), tbody>tr>td:nth-child(8), tbody>tr>td:nth-child(11) {
+  background-color: rgba(52, 58, 64, 0.2);
 }
